--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,14 @@ google-auth-httplib2 = "^0.2.0"
 google-api-python-client = "^2.71.0"
 sqlalchemy = "^2.0.0"
 alembic = "^1.13.0"
+# CLI dependencies
+click = "^8.1.7"
+rich = "^13.7.0"
+typer = "^0.9.0"
+prompt-toolkit = "^3.0.41"
+pyyaml = "^6.0.1"
+toml = "^0.10.2"
+keyboard = "^0.13.5"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
@@ -62,4 +70,7 @@ multi_line_output = 3
 [tool.mypy]
 python_version = "3.11"
 warn_return_any = true
-warn_unused_configs = true 
+warn_unused_configs = true
+
+[tool.poetry.scripts]
+charlie = "charlie.cli:main" 
